# loc_cell_info

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build.gradle.kts  docker-compose.yml
include/: GlobalData.h
src/: Server.cpp  main.cpp
src/main/: AndroidManifest.xml
src/main/java/com/example/project1/: CalculatorActivity.kt  ControlActivity.kt  LocationActivity.kt  MainActivity.kt  MediaPlayerActivity.kt  MyService.kt  SocketsActivity.kt
src/main/res/drawable/: main_gradient.xml
src/main/res/layout/: activity_calculator.xml  activity_control.xml  activity_location.xml  activity_main.xml  activity_media_player.xml  activity_sockets.xml
src/main/res/values/: strings.xml
